# product-listings-manager

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  README.rst  app.py  client.py  config.py  database.rst  docker-compose.yml  get-version.sh  product-listings-manager.spec  product-listings-manager.spec.in  products.py  pyproject.toml  renovate.json  requirements.txt  rpmbuild.sh  server.sh  setup.py  test-requirements.txt  tox.ini
.copr/: Makefile
.github/workflows/: gating.yaml
.tekton/: plm-pull-request.yaml  plm-push.yaml
.tito/: tito.props
.travis/: Dockerfile.centos:7  Dockerfile.fedora:28  Dockerfile.fedora:29  Dockerfile.fedora:rawhide  Dockerfile.py36  install.sh  run.sh
benchmark/: README.rst  httperf.py
docker/: docker-entrypoint.sh  logging.ini
docker/docker-entrypoint-initdb.d/: 05-init.sql
docker/koji.conf.d/: fedora.conf
openshift/: template.yaml
product_listings_manager/: __init__.py  app.py  auth.py  authorization.py  config.py  conftest.py  db_queries.py  logger.py  middleware.py  models.py  permissions.py  products.py  rest_api_v1.py  root.py  schemas.py  tracing.py  utils.py  wsgi.py  xmlrpc.py
product_listings_manager/tests/: test_http_404.py  test_products.py  test_rest_api_v1.py  test_root.py
tests/: conftest.py  factories.py  test_auth.py  test_dbquery.py  test_double_slash_url.py  test_http_404.py  test_live.py  test_permissions.py  test_products.py  test_rest_api_v1.py  test_root.py
