[tool.poetry]
name = "product-listings-manager"
version = "1.1.2"
description = "HTTP interface for finding product listings and interacting with data in composedb."
authors = [
  "Ken Dreyer",
  "Red Hat, Inc. and others"
]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/release-engineering/product-listings-manager"
homepage = "https://github.com/release-engineering/product-listings-manager"

include = [
    "LICENSE",
    "README.rst",
    "tox.ini",
    "client.py",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
fastapi = "^0.115.0"
gunicorn = "^23.0.0"
python-dateutil = "^2.8.2"

factory-boy = {version = "^3.3.0", optional = true}
pytest = {version = "^8.3.3", optional = true}
pytest-cov = {version = "^6.0.0", optional = true}
httpx = {version = "^0.28.0", optional = true}

SQLAlchemy = "^2.0.35"
psycopg2-binary = "^2.9.8"
koji = "^1.35.0"

gssapi = "^1.8.2"
python-ldap = "^3.4.4"
requests-gssapi = "^1.3.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}

opentelemetry-exporter-otlp-proto-http = "^1.22.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"
opentelemetry-instrumentation-requests = "^0.43b0"
opentelemetry-instrumentation-sqlalchemy = "^0.43b0"

[tool.poetry.extras]
test = [
    "factory-boy",
    "pytest",
    "pytest-cov",
    # required by fastapi.testclient
    "httpx",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
extend-select = [
  "I",  # isort
  "N",  # pep8-naming
  "UP",  # pyupgrade
  "FURB",  # refurb
  "PERF",  # Perflint
]
