[project]
name = "product-listings-manager"
version = "1.1.2"
description = "HTTP interface for finding product listings and interacting with data in composedb."
authors = [
  {name = "Ken Dreyer"},
  {name = "Red Hat, Inc. and others"}
]
license = {text = "MIT"}
readme = "README.rst"
requires-python = ">=3.9,<3.14"
dependencies = [
    "fastapi>=0.118.0",
    "gunicorn>=23.0.0",
    "python-dateutil>=2.8.2",
    "SQLAlchemy>=2.0.35",
    "psycopg2-binary>=2.9.8",
    "koji>=1.35.0",
    "gssapi>=1.8.2",
    "python-ldap>=3.4.4",
    "requests-gssapi>=1.3.0",
    "uvicorn[standard]>=0.37.0",
    "opentelemetry-exporter-otlp-proto-http>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-instrumentation-requests>=0.43b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.43b0",
]

[project.optional-dependencies]
test = [
    "factory-boy>=3.3.0",
    "pytest>=8.3.3",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.0",
]

[project.urls]
Homepage = "https://github.com/release-engineering/product-listings-manager"
Repository = "https://github.com/release-engineering/product-listings-manager"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = [
  "I",  # isort
  "N",  # pep8-naming
  "UP",  # pyupgrade
  "FURB",  # refurb
  "PERF",  # Perflint
]
